# molecule-property-predictor

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: project_config.example.yml  v15.yml  v7.yml  v8.yml
data/multi/: test.csv  train.csv  valid.csv
data/single/: balanced-train.csv  test.csv  train.csv  valid.csv
scripts/: create_multi_train_validation_test_sets copy.py  create_single_train_validation_test_sets.py  naive_encodings.json  naive_one_hot_encoder.py  utils.py
servier/: main.py  run.py  utils.py
servier/data_manager/: data_utils.py
servier/models/: model_utils.py  stack_bidirection_layers_functions.py
servier/trainer/: trainer.py
trained_models/v15/Models/MULTI-9-MORGAN(2-4096-CHIR-BT)-256_128_64_32/: Results.txt  params.json
trained_models/v15/Models/MULTI-9-MORGAN(2-4096-CHIR-BT)-256_128_64_32/Weights/: Iteration_95000.index  checkpoint
trained_models/v7/Models/MORGAN(2-4096-CHIR-BT)-256_128_64_32_16/: Results.txt  params.json
trained_models/v7/Models/MORGAN(2-4096-CHIR-BT)-256_128_64_32_16/Results/Iteration_8000/: Results_8000.xlsx
trained_models/v7/Models/MORGAN(2-4096-CHIR-BT)-256_128_64_32_16/Weights/: Iteration_8000.index  Iteration_80000.index  checkpoint  full-checkpoint
trained_models/v8/Models/NAIVE-BLSTM_(100)_(2)_(3)-256_128_64_32/: Results.txt  params.json
trained_models/v8/Models/NAIVE-BLSTM_(100)_(2)_(3)-256_128_64_32/Results/Iteration_6500/: Results_6500.xlsx
trained_models/v8/Models/NAIVE-BLSTM_(100)_(2)_(3)-256_128_64_32/Weights/: Iteration_6500.index  Iteration_65000.index
