[tool.poetry]
name = "molecule-property-predictor"
version = "0.1.0"
description = "Molecule property predictor"
authors = ["Robert Kelevra <kelevra.robert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
tensorflow = "2.13.0"
numpy = "1.23.5"
tqdm = "4.64.1"
pandas = "1.5.0"
seaborn = "0.9.1"
matplotlib = "3.4.3"
tf-slim = "1.1.0"
openpyxl = "3.1.2"
PyYAML = "6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
